1. Added one assignment- routing_and_ajax (named crud/) {Ajax call on destory} 2. Applied Ajax on destroy action in assignment of association.

--- a/ankur/assignment/association/employer/app/views/projects/_form.html.erb
+++ b/ankur/assignment/association/employer/app/views/projects/_form.html.erb
@@ -29,11 +29,13 @@
   <div class="field">
     <%= f.label :start_date %><br />
     <%= f.text_field :start_date %>
+    <span>(yyyy/mm/dd or yyyy-mm-dd)</span>
   </div>
   <br>
   <div class="field">
     <%= f.label :end_date %><br />
     <%= f.text_field :end_date %>
+    <span>(yyyy/mm/dd or yyyy-mm-dd)</span>
   </div>
   <br>
   <h3>Employees</h3>
