--- a/ankur/assignment/association/employer/app/views/employees/index.html.erb
+++ b/ankur/assignment/association/employer/app/views/employees/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= employee.designation.name %></td>
     <td><%= link_to 'Show', employee %></td>
     <td><%= link_to 'Update', edit_employee_path(employee) %></td>
-    <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, :class => 'delete_user' %></td>
   </tr>
 <% end %>
 </table>
