--- a/ankur/assignment/association/employer/app/views/projects/index.html.erb
+++ b/ankur/assignment/association/employer/app/views/projects/index.html.erb
@@ -21,7 +21,7 @@
     <td><%= project.end_date %></td>
     <td><%= link_to 'Show', project %></td>
     <td><%= link_to 'Edit', edit_project_path(project) %></td>
-    <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, :class => 'delete_user' %></td>
   </tr>
 <% end %>
 </table>
