--- a/nikhil/author_book/app/views/books/_form.html.erb
+++ b/nikhil/author_book/app/views/books/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :image %><br />
+    <%= f.text_field :img %>
+  </div>
+  <div class="field">
     <%= f.label :category %><br />
     <%= f.text_field :category %>
   </div>
@@ -26,8 +30,8 @@
 <%= fields_for :writer do |person_form| %>
 
   <div class="field">
-  name: <%= person_form.text_field :name %><br>
-  location : <%= person_form.text_field :location %><br>
+  name: <br><%= person_form.text_field :name %><br>
+  location : <br><%= person_form.text_field :location %><br>
 </div>
 <% end %>
 
