* modifications in author_book project

--- a/nikhil/author_book/app/views/books/_form.html.erb
+++ b/nikhil/author_book/app/views/books/_form.html.erb
@@ -16,7 +16,7 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :image %><br />
+    <%= f.label :img %><br />
     <%= f.text_field :img %>
   </div>
   <div class="field">
